# SkyPaint

./: README.md  build.gradle.kts  gradle.properties  gradlew.bat  local.properties  patch_geom.py  patch_main.py  patch_ui.py  patch_xml.py  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/materials/: clay.filamat  clay.mat  default.filamat  unlit.filamat
app/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp
app/src/main/cpp/engine/: ActionStack.cpp  ActionStack.h  Actions.h  GeometryEngine.cpp  GeometryEngine.h  LiquifyBrush.cpp  LiquifyBrush.h  MarchingCubes.cpp  MarchingCubes.h  MeshDecimation.cpp  MeshDecimation.h  MeshExporter.cpp  MeshExporter.h  PrimitiveGenerator.cpp  PrimitiveGenerator.h  RaycastEngine.cpp  RaycastEngine.h  SceneObject.h  SnapEngine.cpp  SnapEngine.h  SplineGenerator.cpp  SplineGenerator.h  StrokeSystem.cpp  StrokeSystem.h  TubeMeshGenerator.cpp  TubeMeshGenerator.h  VoxelGrid.cpp  VoxelGrid.h
app/src/main/cpp/math/: MathTypes.h
app/src/main/java/com/feather3d/app/: CameraController.kt  ExportManager.kt  Feather3DView.kt  FilamentRenderer.kt  MainActivity.kt  NativeBridge.kt  SceneManager.kt  StylusInputHandler.kt
app/src/main/java/com/skypaint3d/app/: CameraController.kt  ExportManager.kt  FilamentRenderer.kt  (+5 more)
app/src/main/res/drawable/: bg_color_swatch.xml  bg_floating_panel.xml  bg_tool_btn.xml  bg_tool_btn_active.xml  ic_eraser.xml  ic_liquify.xml  ic_sculpt.xml  ic_undo.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
